[package]
name = "itag_receiver"
version = "0.1.0"
edition = "2021"

[build]
target-dir = "."  

[[bin]]
name="itag_receiver"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true

[dependencies]
futures = "0.3"
pretty_env_logger = "0.4"
btleplug = "0.10"
uuid = "1.2.2"
enigo = "0.0.14"
tokio = "1.23.0"
# tokio = { version = "1.23.0", features = ["rt","time"]}

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.6"
bluez-async = "0.6.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"
libc = "0.2.137"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = ["Devices_Bluetooth", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Bluetooth_Advertisement", "Devices_Radios", "Foundation_Collections", "Foundation", "Storage_Streams"] }


