[package]
name = "itag_receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = ["full"] }
futures = "0.3"
pretty_env_logger = "0.4"
btleplug = { version = "0.10", features = ["serde"] }
uuid = "1.2.2"
